--- a/.github/workflows/Collect.yml
+++ b/.github/workflows/Collect.yml
@@ -19,6 +19,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Verify file structure
+      run: |
+        ls -R
+        pwd
     - name: Run script
       run: python src/main.py
     - name: Commit changes
