--- a/GitHub/Workflow/Collect.yml
+++ b/GitHub/Workflow/Collect.yml
@@ -20,7 +20,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run script
-      run: python src/main.py
+      run: python src/Main.py
     - name: Commit changes
       run: |
         git config --local user.email "action@github.com"
